examples/brainfuck/tests/data/incomplete.diag
error: unmatched closing bracket ']'
  ┌─ <input>:1:48
  │
1 │ ++++++++>++++[>++>+++>+++>+<<<<-]>+>+>->>+[<]<-]>>.>---.+++++++..+++.>>.<-.<.+++.------.--------.>>+.>++.
  │                                                ^

error: invalid syntax, expected one of: ',', '.', <end of file>, '>', '[', '<', '-', '+'
  ┌─ <input>:1:48
  │
1 │ ++++++++>++++[>++>+++>+++>+<<<<-]>+>+>->>+[<]<-]>>.>---.+++++++..+++.>>.<-.<.+++.------.--------.>>+.>++.
  │                                                ^

